# SharedLibs

./: .gitignore
include/: Plugin.h  SharedLibrary.h  common.h
src/: CMakeLists.txt
src/SharedLibrary/: CMakeLists.txt  SharedLibrary.cpp  SharedLibraryPrivate.cpp  SharedLibraryPrivate.h
src/SomePlugin/: CMakeLists.txt  SomePlugin.cpp  SomePlugin.h
src/SomeProgram/: CMakeLists.txt  PluginsLoader.cpp  PluginsLoader.h  main.cpp
